# Thesis

./: CMakeLists.txt  Canny.h  ColorReduce.cpp  HighContrast.cpp  OpenCVLibrary.h  SharedMethods.cpp  Sobel.cpp  Sobel.h  ThesisVersion3.docx  ThesisVersion4.docx  ThesisVersion5.docx
CleanImage/: CMakeLists.txt  CleanImage.cpp  HighContrast.h  ImageNode.cpp  OpenCVLibrary.h  Otsu.cpp  Otsu.h  README.txt  Ratio.h  SharedMethods.cpp  Wavelet.cpp  a.out  testImage1.txt  testImage2.txt  tester.cpp
EdgeDetection/: .cproject  .project  BestNumbers.txt  CMakeLists.txt
EdgeDetection/Debug/: makefile  objects.mk
EdgeDetection/Debug/src/: EdgeDetection.d  subdir.mk
EdgeDetection/src/: ArrayBuffer.cpp  ArrayBuffer.h  Canny.cpp  ColorReduce.h  EdgeDetection.cpp  Makefile  OpenCVLibrary.h  Otsu.cpp  README.txt  SharedMethods.cpp  Wavelet.h  a.out  image
ImageCompare/: CMakeLists.txt  ImageCompare.cpp  ImageCompare.h  ImageNode.cpp  ImageNode.h  Makefile  ProcessImage.cpp
RescanedKanjii/: BunchOfContours.pptx
Results/: ProcessAlphabet.java  ProcessResults.java  RealFinalResults.xlsx  ScannedAlphabet.xlsx  ScannedAlphabet1.xlsx  compileTemp.CSV  compileTemp2.CSV  compileTemp3.CSV  ranges.txt  rangesLargest.txt  rangesSmallest.txt  resizeAlphabetAndScanned.xlsx  test1.txt  test10.txt  test100.txt  test101.txt  test102.txt  test103.txt  test104.txt  test105.txt  test106.txt  test107.txt  test108.txt  test109.txt  test11.txt  test110.txt  test111.txt  test112.txt  test113.txt  test114.txt  test115.txt  test116.txt  test117.txt  test118.txt  test119.txt  test12.txt  test120.txt  (+162 more)
(+26 files in other folders)
